allprojects {
    group = 'com.epam.jl.spring'
    version = '1.0-SNAPSHOT'
}
apply plugin: 'java'
apply plugin: 'war'
sourceCompatibility = targetCompatibility = 1.8

compileJava {
    sourceCompatibility = targetCompatibility = 1.8
    options.with {
        fork = true
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

configurations {
    testCompile.extendsFrom compileOnly
}

// this turns logging on in tests:
test.testLogging.showStandardStreams = true

//test {
//    jvmArgs '--add-modules', 'java.xml.bind', '-Djdk.attach.allowAttachSelf=true'
//}

dependencies {
    compile "org.springframework:spring-context:$springVersion",
            'org.springframework:spring-web:+',
            'org.springframework:spring-webmvc:+',
            'javax.el:javax.el-api:+',
            'javax.servlet:jstl:1.2',
            // AOP
            'org.aspectj:aspectjrt:+',
            'org.aspectj:aspectjweaver:+',
            'aopalliance:aopalliance:+',

            // JDBC
            'com.mchange:c3p0:+',

            'org.springframework:spring-jdbc:+',

            // ORM
            'org.hibernate:hibernate-spatial:+',
            'org.hibernate:hibernate-validator:+',
            'org.hibernate:hibernate-java8:+',
            'org.hibernate:hibernate-core:+',
            'org.springframework:spring-orm:+',

            // Common
            'org.apache.logging.log4j:log4j-core:+'

    runtime 'com.h2database:h2:+'

    testCompile 'org.junit.jupiter:junit-jupiter-api:+',
            'org.hamcrest:java-hamcrest:+',
            'org.springframework:spring-test:+'

    compileOnly 'org.projectlombok:lombok:+',
            'edu.washington.cs.types.checker:checker-framework:+',
            // Tomcat
            'org.apache.tomcat:tomcat-api:+',
            'org.apache.tomcat:tomcat-jsp-api:+',
            'edu.washington.cs.types.checker:checker-framework:+'
}

task Wrapper(type: Wrapper) {
    description = 'Generates gradlew[.bat] scripts'
    gradleVersion = '4.2.1'
    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
}